Finished styling for countdown and upgrades section, fixed footer alignment issue

--- a/app/assets/styles/modules/_countdown.css
+++ b/app/assets/styles/modules/_countdown.css
@@ -1,3 +1,40 @@
 .countdown {
     
+    &__background {
+        height: 16.75rem;
+        padding: 4rem 0;
+    }
+
+    &__content {
+        width: 66rem;
+        margin: 0 auto;
+        display: flex;
+
+        &__section {
+            width: 25%;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: center;
+
+            &__number {
+                font-family: "Montserrat", sans-serif;
+                font-size: 3.5rem;
+
+                &--seconds {
+                    font-size: 4.7rem;
+                }
+            }
+
+            &__time {
+                font-size: 1.2rem;
+                font-weight: 300;
+
+                &--seconds {
+                    margin-top: 0.5rem;
+                }
+            }
+        }
+    }
 }
