--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -4,8 +4,9 @@
     &__title {
         text-transform: uppercase;
         color: $darkGray;
-        font-weight: 400;
-        font-size: 2rem;
+        font-family: "Montserrat", sans-serif;
+        font-weight: 500;
+        font-size: 1.8rem;
         letter-spacing: 1.2px;
         margin-top: 3.5rem;
         margin-bottom: 0;
