--- a/app/assets/styles/modules/_upgrades.css
+++ b/app/assets/styles/modules/_upgrades.css
@@ -23,7 +23,35 @@
                     border-radius: 50%;
                     color: #fff;
                     text-align: center;
-                    padding: 2.5rem;
+                    position: relative;
+
+                    &__num {
+                        font-size: 1.5rem;
+                        font-weight: 300;
+                        font-family: "Montserrat", sans-serif;
+                        position: absolute;
+                        top: 2rem;
+                        left: 1.5rem;
+                    }
+
+                    &__cents {
+                        font-size: 0.8rem;
+                        font-weight: 300;
+                        position: absolute;
+                        top: 1.3rem;
+                        left: 4.3rem;
+                    }
+
+                    &__frequency {
+                        position: absolute;
+                        width: 7rem;
+                        top: 3rem;
+                        left: 0;
+                        text-transform: uppercase;
+                        font-weight: 300;
+                        font-size: 0.8rem;
+                        letter-spacing: 1.3px;
+                    }
                 }
 
                 &__container--blue {
